Wrong size of 'Remove watch' button at Basic IDE. fdo#44237

This patch resize the nVirtToolBoxHeight in WatchWindow::WatchWindow if
the aRemoveWatchButton plus some space is higher than nVirtToolBoxHeight. So
the aRemoveWatchButton doesn't go into aHeaderBar.